--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "react-player": "^2.14.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
